keycloakmanifestfile/keycloaknew/ingressforkeycloak.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: auth.cnss.cg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-external
                port:
                  number: 80
